--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </div>
 
-        <a href="thankyou.html" id="submit" class="btn">SUBMIT</a>
+        <a href="thankyou.html" id="submit" class="btn">SUBMIT NOW</a>
     </div>
 
     <p class="markup">
