--- a/thankyou.html
+++ b/thankyou.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -17,7 +17,7 @@
             <p>You selected <span id="numRate">4</span> out of 5 </p>
         </div>
         <h1>Thank You!</h1>
-        <p>Thank you! We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
+        <p>Thank you! We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!</p>
     </div>
     <p class="markup">
         Challenge by <a href="(https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/Heph-zibah" target="_blank">Oluwatosin Abigail Ogundeji</a>.
@@ -25,4 +25,4 @@
     <script src="js/app.js"></script>
 </body>
 
-</html>
+</html> -->
