--- a/index.html
+++ b/index.html
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Interactive Rating App</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Interactive Rating App</title>
-</head>
+	<body>
+		<div class="card ratingCard">
+			<div class="rating-star">
+				<img src="img/icon-star.svg" alt="" />
+			</div>
+			<h1>How did we do?</h1>
+			<p>
+				Please let us know how we did with your support request. All feedback is
+				appreciated to help us improve our offering!
+			</p>
+			<div class="rating-click" id="rating-click">
+				<div class="click" id="clicks">
+					<p>1</p>
+				</div>
+				<div class="click" id="clicks">
+					<p>2</p>
+				</div>
+				<div class="click" id="clicks">
+					<p>3</p>
+				</div>
+				<div class="click" id="clicks">
+					<p>4</p>
+				</div>
+				<div class="click" id="clicks">
+					<p>5</p>
+				</div>
+			</div>
 
-<body>
+			<a href="#" id="submit" class="btn">SUBMIT</a>
+		</div>
 
-    <div class="card ratingCard">
-        <div class="rating-star">
-            <img src="img/icon-star.svg" alt="">
-        </div>
-        <h1>How did we do? </h1>
-        <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering! </p>
-        <div class="rating-click" id="rating-click">
-            <div class="click" id="clicks">
-                <p>1</p>
-            </div>
-            <div class="click" id="clicks">
-                <p>2</p>
-            </div>
-            <div class="click" id="clicks">
-                <p>3</p>
-            </div>
-            <div class="click" id="clicks">
-                <p>4</p>
-            </div>
-            <div class="click" id="clicks">
-                <p>5</p>
-            </div>
-        </div>
-
-
-
-        <a href="#" id="submit" class="btn">SUBMIT</a>
-    </div>
-
-    <!-- <p class="markup">
-        Challenge by <a href="(https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/Heph-zibah" target="_blank">Oluwatosin Abigail Ogundeji</a>.
-    </p> -->
-
-    <div class="card thankYouCard">
-        <img src="img/illustration-thank-you.svg" alt="">
-        <div class="info">
-            <p><span id="numRate"></span> </p>
-        </div>
-        <h1>Thank You!</h1>
-        <p>Thank you! We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!</p>
-    </div>
-    <p class="markup">
-        Challenge by <a href="(https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI" target="_blank">Frontend Mentor</a>. Coded by <a href="https://www.frontendmentor.io/profile/Heph-zibah" target="_blank">Oluwatosin Abigail Ogundeji</a>.
-    </p>
-    <script src="js/app.js"></script>
-</body>
-
+		<div class="card thankYouCard">
+			<img src="img/illustration-thank-you.svg" alt="" />
+			<div class="info">
+				<p><span id="numRate"></span></p>
+			</div>
+			<h1>Thank You!</h1>
+			<p>
+				Thank you! We appreciate you taking the time to give a rating. If you ever
+				need more support, don't hesitate to get in touch!
+			</p>
+		</div>
+		<p class="markup">
+			Challenge by
+			<a
+				href="(https://www.frontendmentor.io/challenges/interactive-rating-component-koxpeBUmI"
+				target="_blank"
+				>Frontend Mentor</a
+			>. Coded by
+			<a href="https://www.frontendmentor.io/profile/Heph-zibah" target="_blank"
+				>Oluwatosin Abigail Ogundeji</a
+			>.
+		</p>
+		<script src="js/app.js"></script>
+	</body>
 </html>
